--- a/ConnectEcole/css/skins/blue.css
+++ b/ConnectEcole/css/skins/blue.css
@@ -3,16 +3,10 @@
     border: 2px solid #2196f3;
 }
 
-.contact .contact-info-item .icon .fa,
-.blog .blog-item-inner .blog-info .blog-tags a,
-.lightbox .lightbox-controls .prev-item .fa,
-.lightbox .lightbox-controls .next-item .fa,
-.portfolio .portfolio-item .portfolio-info .icon .fa,
-body.dark .portfolio .portfolio-filter button.active,
-.portfolio .portfolio-filter button.active,
 .service .service-item .service-item-inner .icon .fa,
 .about .about-content .about-text h3 span, 
-body.dark .aside .logo a, 
+.aside .copyright-text, 
+body.dark .aside .logo a,
 body.dark .aside .nav li a:hover,
 body.dark .aside .nav li a.active,
 .aside .logo a,
@@ -20,11 +14,6 @@ body.dark .aside .nav li a.active,
 .aside .nav li a.active{ 
     color: #2196f3;
 } 
-.blog .blog-item-inner .blog-img .blog-date,
-.service .service-item .service-item-inner:hover .icon, 
-.about .about-content .timeline .circle-dot,
-.about .about-content .timeline .timeline-item::before,
-.about .about-content .skills .skill-item .progress .progress-in,
 .btn,
 .section-title h2::after,
 .section-title h2::before,
@@ -33,7 +22,4 @@ body.dark .aside .nav li a.active,
 .aside .nav-toggler span:after,
 .home .intro .social-links a{
     background-color: #2196f3;
-}
-.portfolio .portfolio-filter button.active{
-    border-color: #2196f3;
 }
