--- a/Quiz_app/style.css
+++ b/Quiz_app/style.css
@@ -99,7 +99,58 @@ body{
     margin-bottom: 10px;
     cursor: pointer;
     text-transform: capitalize;
+    opacity: 0;
+    animation: fadeIn 0.3s ease forwards;
+    position: relative;
+    overflow: hidden;
 }
+.quiz-box .option-container .option.already-answered{
+    pointer-events: none;
+
+}
+@keyframes fadeIn{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+.quiz-box .option-container .option.correct::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: green;
+    z-index: -1;
+    animation: slideInLeft 0.5s forwards;
+}
+@keyframes slideInLeft{
+    0%{
+        transform: translateX(-100%);
+    }
+    100%{
+        transform: translateX(0%);
+    }
+}
+.quiz-box .option-container .option.wrong::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: red;
+    z-index: -1;
+    animation: slideInLeft 0.5s forwards;
+}
+.quiz-box .option-container .option.wrong,
+.quiz-box .option-container .option.correct{
+    color: #ffffff;
+}
+
 .quiz-box .answers-indicator{
     border-top: 1px solid #cccccc;
 }
@@ -111,6 +162,20 @@ body{
     border-radius: 50%;
     margin-right: 3px;
     margin-top: 15px;
+}
+.quiz-box .answers-indicator div.correct{
+    background-color: green;
+    background-image: url("./img/correct-img.png");
+    background-size: 50%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.quiz-box .answers-indicator div.wrong{
+    background-color: red;
+    background-image: url("./img/wrong-img.png");
+    background-size: 50%;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 .result-box{
     text-align: center;
